# Fractal-Generator

./: .gitignore  CMakeLists.txt  README.md
gui/: gui.cc  gui.h  main_window.cc  main_window.h  main_window.ui  resources.qrc
inc/: bitmap.h  fractal_generator.h  fractal_generator_builder.h  image.h
inc/fractal/: fractal.h
inc/fractal/coloring/: coloring.h  histogram_coloring.h
inc/fractal/mandelbrot/: mandelbrot.h  zoom.h  zoom_list.h
inc/image/: image.h
inc/image/bitmap/: bitmap.h  bitmap_header.h  bitmap_info_header.h
inc/image/pixels/: rgb_pixel.h  rgba_pixel.h
src/: bitmap.cc  fractal_generator.cc  fractal_generator_builder.cc  main.cc
src/fractal/coloring/: histogram_coloring.cc
src/fractal/mandelbrot/: mandelbrot.cc  zoom_list.cc
src/image/bitmap/: bitmap.cc
